# usession

./: .gitignore  Makefile.in  README.md  USession.cbp  configure.ac
src/include/private/: defs.h
src/include/usession/: defs.h  user.h
src/os/linux/: environment.cc  private.h  session.cc
src/os/windows/: resources.rc.in  session.cc
